# Gamma-slides-Website

./: .env.example  Caddyfile  DEPLOY.md  README.md  docker-compose.yml  out.txt  start.bat
.claude/: settings.json
backend/: .env  Dockerfile  alembic.ini  force_classify.py  pyproject.toml  requirements.txt  run_classification.py  setup_db.sql
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  seed_categories.py
backend/app/ai/: __init__.py  ai_provider.py  ollama_provider.py  openai_provider.py  rule_based.py
backend/app/api/: analytics.py  categories.py  classification.py  presentations.py  search.py  slide_content.py  thumbnails.py
backend/app/ingestion/: content_extractor.py  metadata_extractor.py  scanner.py  thumbnail_generator.py
backend/app/models/: __init__.py  ai_classification.py  analytics.py  category.py  department.py  ingestion.py  offline.py  presentation.py  sync_state.py  tag.py
backend/app/schemas/: __init__.py  analytics.py  category.py  classification.py  presentation.py  search.py
backend/app/services/: analytics_service.py  category_service.py  classification_service.py  dropbox_sync_service.py  pdf_converter.py  presentation_service.py  quality_service.py  search_service.py  similarity_service.py
backend/scripts/: classify_all.py  consolidate_categories.py  force_assign_categories.py  title_override_categories.py
backend/slidevault_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+17 files in other folders)
