[project]
name = "slidevault-backend"
version = "1.0.0"
description = "SlideVault — Enterprise Presentation Knowledge Portal API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "alembic>=1.13.0",
    "python-pptx>=1.0.0",
    "PyPDF2>=3.0.0",
    "Pillow>=10.3.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
pdf = [
    "PyMuPDF>=1.24.0",
]
openai = [
    "openai>=1.30.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
google-ai = [
    "google-generativeai>=0.5.0",
]
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
